deploy: 7eb181263e72486d7a541f70979a5b66b53beff8

--- a/labs/Week_05/consistency.html
+++ b/labs/Week_05/consistency.html
@@ -460,7 +460,7 @@ const thebe_selector_output = ".output, .cell_output"
 </div>
 <p>Similarly, for a given <span class="math notranslate nohighlight">\(\epsilon\)</span> value, the probability <span class="math notranslate nohighlight">\(Pr(|\bar{X}_{n}-\mu| &lt; \epsilon)\)</span> forms a sequence
 and it increases towards one as we increase the sample size <span class="math notranslate nohighlight">\(n\)</span>.
-For a given sample size, wWhen we change the value of maximum difference, <span class="math notranslate nohighlight">\(\epsilon_1\)</span> to <span class="math notranslate nohighlight">\(\epsilon_2\)</span> (<span class="math notranslate nohighlight">\(\epsilon_1 &lt; \epsilon_2\)</span>), we see that <span class="math notranslate nohighlight">\(Pr(|\bar{X}_{n}-\mu| &lt; \epsilon_1) &lt; Pr(|\bar{X}_{n}-\mu| &lt; \epsilon_2)\)</span> which makes sense that falling into a wid</p>
+For a given sample size, when we change the value of maximum difference, <span class="math notranslate nohighlight">\(\epsilon_1\)</span> to <span class="math notranslate nohighlight">\(\epsilon_2\)</span> (<span class="math notranslate nohighlight">\(\epsilon_1 &lt; \epsilon_2\)</span>),we see that <span class="math notranslate nohighlight">\(Pr(|\bar{X}_{n}-\mu| &lt; \epsilon_1) &lt; Pr(|\bar{X}_{n}-\mu| &lt; \epsilon_2)\)</span> which makes sense that falling into a wider a wider interval results in a higher probability.</p>
 </div>
 
     <script type="text/x-thebe-config">
